Add configurable CPU templates API
